[project]
name = "thibaut-artefact-toolkit"
version = "0.1.0"
description = ""
authors = [
    {name = "Thibaut Corallo",email = "thibaut.corallo@artefact.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click (>=8.3.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "thibaut_artefact_toolkit", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-cli = "thibaut_artefact_toolkit.cli:hello"

[dependency-groups]
dev = [
    "ruff (>=0.15.4,<0.16.0)"
]

[tool.ruff]
target-version = "311" # Python version (examples: 39 for 3.9, 310 for 3.10, etc.)
line-length = 120 # Maximum line-length for formatting
exclude = [ # Scripts or folders to exclude from linting/formatting
    "bin", # ignore whole folder
    "guidelines",
    "notebooks",
    "tests",
    "validation_tests"
]

[tool.ruff.lint]
ignore = [ # Rules to ignore. In this example these are all docstring (D) related rules.
    #"D100", # Missing docstring
    #"D205", # 1 blank line required between summary qnd description
    #"D415", # First line should end with a period, question mark or exclamation point.
    "S113", #Usage of requests without timeout
    "N803", #Argument name should be lowercase (Will be an issue for X_train, X_test naming convention)
    "N806"  #Variable in function should be lowercase (Will be an issue for the same reason as N803)
]
select = [ # Sets of rules to check for
    #"B",    # bugbear
    #"C4",   # comprehensions
    #"C90",  # mccabe
    #"D",    # docstrings
    "E",    # pycodestyle
    #"W",    # pycodestyle
    "F",    # flake8
    "S",    # bandit
    "N",    # pep8-naming
    #"RUF",  # ruff
    "I",    # isort
    #"PD",   # pandas
    "T20",  #flake8-print plugin to make sure there are no print statements in the code
    "ANN",  #flake8-annotations plugin to make sure functions and methods are properly type annotated
    "ARG"   #flake8-unused-arguments plugin to check for unused arguments that should be removed
]

[tool.ruff.lint.pydocstyle]
convention = "google" # The type of docstring style to follow. Will be elaborated on in the module about docstrings.

